@@ -23,9 +23,9 @@ Objects can be created by calls of the form \code{new("ABset", assayData, phenoD
   }
 }
 \section{Extends}{
-Class \code{"\linkS4class{eSet}"}, directly.
-Class \code{"\linkS4class{VersionedBiobase}"}, by class "eSet", distance 2.
-Class \code{"\linkS4class{Versioned}"}, by class "eSet", distance 3.
+Class \code{\link[Biobase:class.eSet]{eSet}}, directly.
+Class \code{\link[Biobase:class.VersionedBiobase]{VersionedBiobase}}, by class "eSet", distance 2.
+Class \code{\link[Biobase:class.Versioned]{Versioned}}, by class "eSet", distance 3.
 }
 \section{Methods}{
   \describe{
