@@ -63,7 +63,7 @@
 \section{Extends}{
   Class \code{"\linkS4class{list}"}, from data part.
   Class \code{"\linkS4class{vector}"}, by class "list", distance 2.
-  Class \code{"\linkS4class{AssayData}"}, by class "list", distance 2.
+  Class \code{\link[Biobase:class.assayData]{assayData}}, by class "list", distance 2.
 }
 \section{Methods}{
   \describe{
