@@ -241,4 +241,14 @@ is decoded and scanned
 
 * fixed malformed DESCRIPTION file
 
+2009-07-31 B Carvalho - committed version 1.3.16
 
+* Removed several warnings at the C-level
+
+* Fixed several incorrect links in the documentation
+
+* Removed multiple notes "no visible binding for global variable"
+  by replacing, in crlmmIlluminaWrapper and crlmmWrapper,
+  a) samplesheet5 by get("samplesheet5")
+  b) path by get("path")
+  c) res by get("res")
